----------------
Jun 23, 2022
Name: Boqin Zhang
* Add spin-polarized SCAN functional


----------------
May 15, 2022
Name: Boqin Zhang
* Add scan exchange-correlation functional and metaGGA functions
* Add description of vdW-DF files, and modify the line seperators in these files
* Fix the bug of printing Cartesian coordinates


----------------
Feb 13, 2022
Name: Boqin Zhang
* Add vdW-DF1 and vdW-DF2 feature


----------------
Dec 22, 2021
Name: Qimen Xu, Taehee Ko (Penn State University)
* Fix an issue with phase factor in nonlocal force calculation.


----------------
Dec 21, 2021
Name: Shashikant Kumar
* Modify the slow tests in the test-suite


----------------
Dec 18, 2021
Name: Boqin Zhang
* Add DFT-D3 feature


----------------
Sep 20, 2021
Name: Xin Jing
* Add GGA_RPBE, GGA_PBEsol
* Add reference_cuoff warnings
* Replace PulayRestartFreq with PulayRestartFlag


----------------
Sep 19, 2021
Name: Shashikant Kumar
* Updated reference output files in tests folder
* Changed CELL to LATVEC_SCALE in tests folder
* Removed the saving workspace for each runs
* Added NLCC tests


----------------
Sep 16, 2021
Name: Xin Jing
* Add LATVEC_SCALE option
* Add magnetization mixing method
* Add NLCC
* udpate documentation
* Capitalize all Error and Warning
* Fix a bug in spherical harmonics

----------------
July 9, 2021
Name: Shashikant Kumar
* Changed Readme.md and doc manual to make it consistent with the new tests folder

----------------
June 16, 2021
Name: Shashikant Kumar
* Added the testing suite and the python framework
* Deleted the old "tests" folder

----------------
Oct 07, 2020
Name: Qimen Xu
* Modify pseudopotential reading to support TM potentials.


----------------
Jul 27, 2020
Name: Qimen Xu
* Fix the atom type in the cnt.ion file at tests/IllustrativeExamples/CNT/, the answer of this test is not changed.


----------------
Jun 20, 2020
Name: Qimen Xu
* Use max and min of S.EigVal instead of assuming it's ordered ascendingly.


----------------