@@ -1,4 +1,10 @@
 ----------------
+Jun 30, 2022
+Name: Boqin Zhang
+* Modify Lanczos for SCAN
+
+
+----------------
 Jun 23, 2022
 Name: Boqin Zhang
 * Add spin-polarized SCAN functional
